@@ -1,27 +1,27 @@
 ## Emacs, make this -*- mode: sh; -*-
 
-#FROM r-base:latest
-FROM rocker/r-base:4.0.0
+FROM r-base:latest
+#FROM rocker/r-base:4.0.0
 
 LABEL org.label-schema.license="GPL-2.0" \
       org.label-schema.vcs-url="https://github.com/RcppCore/Rcpp" \
       maintainer="Dirk Eddelbuettel <edd@debian.org>"
 
-# RUN apt-get update \
-#         && apt-get install -y --no-install-recommends \
-#                 libcurl4-openssl-dev \
-#                 libssl-dev \
-#                 r-cran-inline \
-#                 r-cran-pkgkitten \
-#                 git \
-#         && install.r covr rbenchmark tinytest
-
 RUN apt-get update \
-    && apt-get install -y --no-install-recommends \
-               libcurl4-openssl-dev \
-               libssl-dev \
-               git \
-    && install.r covr inline pkgKitten rbenchmark tinytest
+        && apt-get install -y --no-install-recommends \
+                libcurl4-openssl-dev \
+                libssl-dev \
+                r-cran-inline \
+                r-cran-pkgkitten \
+                git \
+        && install.r covr rbenchmark tinytest
+
+#RUN apt-get update \
+#    && apt-get install -y --no-install-recommends \
+#               libcurl4-openssl-dev \
+#               libssl-dev \
+#               git \
+#    && install.r covr inline pkgKitten rbenchmark tinytest
 
 ENV _R_CHECK_FORCE_SUGGESTS_ FALSE
 ENV _R_CHECK_TESTS_NLINES_ 0
